[metadata]
name = ft_package
version = 0.0.1
author = jburlama
author_email = jburlama@42.fr.rio
description = A sample test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jburlama/ft_package
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
